docs: add 500 status code to swagger api-s
